package org.example.functions;

public interface MathFunction {
    public double calculate(double value, double error);
} 