package org.example.functions.trigonometry;

import org.example.functions.AbstractMathFunction;
import org.example.functions.MathFunction;

public class CscFunction extends AbstractMathFunction {

    private final MathFunction sin;

    public CscFunction(MathFunction sin) {
        this.sin = sin;
    }

    @Override
    public double doCalculate(double x, double error) {

        double denominator = sin.calculate(x, error/2);
        
        if (Math.abs(denominator) < error) return Double.NaN;

        return 1/denominator;
    }
}